--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "migrate": "postgrator --config postgrator-config.js",
     "migrate:test": "env NODE_ENV=test npm run migrate",
     "migrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate",
+    "demigrate:production": "env SSL=true DATABASE_URL=$(heroku config:get DATABASE_URL) npm run migrate -- 0",
     "start": "node src/server.js",
     "predeploy": "npm audit && npm run migrate:production",
     "deploy": "git push heroku master"
